--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
             <version>${testng.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.8.0</version>
+</dependency>
+
+        
     </dependencies>
 
     <build>
