--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,14 +6,12 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
-variables:
-  MAVEN_OPTS: "-Xmx3072m"
-
 steps:
-- task: UseJava@1
+- task: JavaToolInstaller@0
   inputs:
     versionSpec: '17'
-    jdkArchitecture: 'x64'
+    jdkArchitectureOption: 'x64'
+    jdkSourceOption: 'PreInstalled'
 
 - task: Maven@3
   inputs:
